--- a/public/index.html
+++ b/public/index.html
@@ -9,12 +9,12 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;1,400&display=swap"
       rel="stylesheet"
     />
-    <title>Vuexy - Vuejs Admin Dashboard Template</title>
+    <title>ANT - CVV Admin Dashboard Template</title>
   </head>
   <body>
     <noscript>
       <strong
-        >We're sorry but Vuexy - Vuejs Admin Dashboard Template doesn't work properly without JavaScript enabled. Please
+        >We're sorry but ANT - CVV Admin Dashboard  doesn't work properly without JavaScript enabled. Please
         enable it to continue.</strong
       >
     </noscript>
