--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;1,400&display=swap"
       rel="stylesheet"
     />
-    <title>ANT - CVV Admin Dashboard Template</title>
+    <title>ANT - CVV Admin Dashboard </title>
   </head>
   <body>
     <noscript>
